force-app/main/default/objects/MUSW__Complaint2__c/fields/MUSW__Address__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to address to which the complaint is associated with.</description>
    <inlineHelpText>Provide the address to which this complaint is associated with.</inlineHelpText>
    <label>Address</label>
    <referenceTo>MUSW__Address__c</referenceTo>
    <relationshipLabel>Complaints</relationshipLabel>
    <relationshipName>Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>