force-app/main/default/objects/MUSW__Complaint2__c/fields/MUSW__Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Closed_Date__c</fullName>
    <description>The date that the complaint was closed on.</description>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>