force-app/main/default/objects/MUSW__Complaint2__c/fields/MUSW__Geolocation__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Geolocation__c</fullName>
    <description>Compound field containing the latitude and longitude for where the inspection is located. Usually copied from the related parcel geolocation field.</description>
    <label>Geolocation</label>
    <scale>9</scale>
    <type>Location</type>
</CustomField>