force-app/main/default/objects/MUSW__Complaint2__c/fields/MUSW__Parcel_Owner__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Parcel_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deprecated. In environments synched with Assessor data, parcel owners are no longer contacts.</description>
    <inlineHelpText>as indicated on parcel</inlineHelpText>
    <label>Primary Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Complaints as Primary Owner</relationshipLabel>
    <relationshipName>Complaint2s</relationshipName>
    <type>Lookup</type>
</CustomField>