force-app/main/default/objects/MUSW__Complaint2__c/fields/MUSW__Primary_Complaint__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Primary_Complaint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Complaint</label>
    <referenceTo>MUSW__Complaint2__c</referenceTo>
    <relationshipLabel>Related Complaints</relationshipLabel>
    <relationshipName>Related_Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>