force-app/main/default/objects/MUSW__Complaint2__c/fields/MUSW__Priority__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Priority__c</fullName>
    <description>Can be configured to be reflected on an inspection to assist with inspection assignments.</description>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>