force-app/main/default/objects/MUSW__Complaint2__c/fields/MUSW__Reason_For_Closure__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Reason_For_Closure__c</fullName>
    <description>Reason for closing the complaint, needs to be entered when a complaint is being closed.</description>
    <inlineHelpText>Please select a reason for closing the complaint.</inlineHelpText>
    <label>Reason For Closure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>No Violations Present</fullName>
            </value>
            <value>
                <fullName>Administrative Action Taken</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>