force-app/main/default/objects/MUSW__Complaint2__c/fields/MUSW__Responsible_Party__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Responsible_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Complaints as Responsible Party</relationshipLabel>
    <relationshipName>Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>