force-app/main/default/objects/MUSW__Complaint2__c/fields/MUSW__Responsible_Party_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Responsible_Party_Type__c</fullName>
    <label>Responsible Party Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Property Owner</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>Licensee</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>