force-app/main/default/objects/MUSW__Complaint2__c/fields/MUSW__Street__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Street__c</fullName>
    <description>If Parcel is selected this value will be filled in via workflow from the Parcel Address field</description>
    <externalId>true</externalId>
    <label>Street</label>
    <length>50</length>
    <type>Text</type>
</CustomField>