force-app/main/default/objects/MUSW__Complaint2__c/fields/MUSW__Subject__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Subject__c</fullName>
    <description>Deprecated</description>
    <label>Subject (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>