force-app/main/default/objects/MUSW__Complaint2__c/fields/MUSW__Total_Balance__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Total_Balance__c</fullName>
    <description>Formula field that calculates the difference between Total Fees and Total Payments.</description>
    <formula>MUSW__Total_Fees__c - MUSW__Total_Payments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>