force-app/main/default/objects/MUSW__Complaint2__c/fields/MUSW__Total_Payments__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Total_Payments__c</fullName>
    <description>Summary of all Amount field of all Payments related to this record.</description>
    <inlineHelpText>Automatically Refreshed after Payment updates</inlineHelpText>
    <label>Total Payments</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>