force-app/main/default/objects/MUSW__Complaint2__c/fields/MUSW__Type2__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Type2__c</fullName>
    <description>The complaint type. This is typically related to the record type.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Complaint_Types</valueSetName>
    </valueSet>
</CustomField>