force-app/main/default/objects/MUSW__Complaint2__c/fields/MUSW__Unit__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Unit__c</fullName>
    <description>Allows the user to specify an individual unit in a multiunit building or address.</description>
    <label>Unit</label>
    <length>16</length>
    <type>Text</type>
</CustomField>