force-app/main/default/objects/MUSW__Complaint2__c/fields/MUSW__Zip__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Zip__c</fullName>
    <description>If Parcel is selected this value will be filled in via workflow from the Parcel Post/Zip Code field.</description>
    <label>Zip/ Post Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>