force-app/main/default/objects/MUSW__Complaint2__c/fields/Parcel_Owner_Formula__c.field-meta.xml
<CustomField>
    <fullName>Parcel_Owner_Formula__c</fullName>
    <formula>MUSW__Parcel__r.MUSW__Assessor_Owner_Name__c</formula>
    <label>Address Owner</label>
    <type>Text</type>
</CustomField>