force-app/main/default/objects/MUSW__Complaint2__c/fields/Property_Owner__c.field-meta.xml
<CustomField>
    <fullName>Property_Owner__c</fullName>
    <formula>MUSW__Parcel__r.MUSW__Assessor_Owner_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Owner</label>
    <type>Text</type>
</CustomField>