force-app/main/default/objects/MUSW__Complaint2__c/fields/Responsible_Account__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Complaints</relationshipLabel>
    <relationshipName>Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>