force-app/main/default/objects/MUSW__Complaint2__c/validationRules/MUSW__Cannot_Close_Complaint_Without_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Cannot_Close_Complaint_Without_Reason</fullName>
    <active>true</active>
    <description>Complaint cannot be closed without setting the reason for closure.</description>
    <errorConditionFormula>ISCHANGED(MUSW__Status__c)  &amp;&amp;  ISPICKVAL(MUSW__Status__c, &apos;Closed&apos;)  &amp;&amp;  ISBLANK(TEXT(MUSW__Reason_For_Closure__c))</errorConditionFormula>
    <errorDisplayField>MUSW__Reason_For_Closure__c</errorDisplayField>
    <errorMessage>Complaint cannot be closed without a reason for closure. Please give a reason for closing the complaint.</errorMessage>
</ValidationRule>