force-app/main/default/objects/MUSW__Complaint2__c/validationRules/MUSW__Restrict_Address_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Restrict_Address_Update</fullName>
    <active>true</active>
    <description>Cannot update address of related complaint that has a primary complaint</description>
    <errorConditionFormula>NOT(ISBLANK(MUSW__Primary_Complaint__c )) &amp;&amp; (MUSW__City__c &lt;&gt; MUSW__Primary_Complaint__r.MUSW__City__c || TEXT(MUSW__State__c) &lt;&gt; TEXT(MUSW__Primary_Complaint__r.MUSW__State__c) || MUSW__Unit__c &lt;&gt; MUSW__Primary_Complaint__r.MUSW__Unit__c || MUSW__Zip__c &lt;&gt; MUSW__Primary_Complaint__r.MUSW__Zip__c &amp;&amp; MUSW__Street__c &lt;&gt; MUSW__Primary_Complaint__r.MUSW__Street__c)</errorConditionFormula>
    <errorMessage>Cannot update address of related complaint that has a primary complaint</errorMessage>
</ValidationRule>