force-app/main/default/objects/MUSW__Complaint2__c/validationRules/MUSW__Restrict_Closed_Complaint_Linkage.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Restrict_Closed_Complaint_Linkage</fullName>
    <active>true</active>
    <description>Cannot link closed complaints</description>
    <errorConditionFormula>NOT(ISBLANK(MUSW__Primary_Complaint__c )) &amp;&amp; ISCHANGED(MUSW__Primary_Complaint__c ) &amp;&amp; ISPICKVAL(MUSW__Primary_Complaint__r.MUSW__Status__c, &quot;Closed&quot;)</errorConditionFormula>
    <errorMessage>Cannot link closed complaints</errorMessage>
</ValidationRule>