force-app/main/default/objects/MUSW__Complaint2__c/validationRules/MUSW__Restrict_Multi_Level_Complaints.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Restrict_Multi_Level_Complaints</fullName>
    <active>true</active>
    <description>Cannot have multi level complaints</description>
    <errorConditionFormula>NOT(ISBLANK(MUSW__Primary_Complaint__c )) &amp;&amp; NOT(ISBLANK(MUSW__Primary_Complaint__r.MUSW__Primary_Complaint__c))</errorConditionFormula>
    <errorMessage>Cannot have multi level complaints</errorMessage>
</ValidationRule>