force-app/main/default/objects/MUSW__Complaint2__c/validationRules/MUSW__Restrict_Newer_Primary_Complaint.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Restrict_Newer_Primary_Complaint</fullName>
    <active>true</active>
    <description>Cannot relate older complaint to a newer primary complaint</description>
    <errorConditionFormula>NOT(ISBLANK(MUSW__Primary_Complaint__c )) &amp;&amp; MUSW__Primary_Complaint__r.CreatedDate  &gt;  CreatedDate</errorConditionFormula>
    <errorMessage>Cannot relate older complaint to a newer primary complaint</errorMessage>
</ValidationRule>