force-app/main/default/objects/MUSW__Complaint2__c/validationRules/MUSW__Restrict_Parcel_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Restrict_Parcel_Update</fullName>
    <active>true</active>
    <description>Cannot update parcel of related complaint that has a primary complaint</description>
    <errorConditionFormula>NOT(ISBLANK(MUSW__Primary_Complaint__c )) &amp;&amp; MUSW__Parcel__c &lt;&gt; MUSW__Primary_Complaint__r.MUSW__Parcel__c</errorConditionFormula>
    <errorMessage>Cannot update parcel of related complaint that has a primary complaint</errorMessage>
</ValidationRule>