force-app/main/default/objects/MUSW__Complaint2__c/validationRules/MUSW__Type_is_Required_For_Response_Party.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Type_is_Required_For_Response_Party</fullName>
    <active>true</active>
    <description>When response party is set, the type of response party is required.</description>
    <errorConditionFormula>AND(NOT( ISBLANK( MUSW__Responsible_Party__c ) ),  ISBLANK(TEXT( MUSW__Responsible_Party_Type__c )))</errorConditionFormula>
    <errorDisplayField>MUSW__Responsible_Party_Type__c</errorDisplayField>
    <errorMessage>A selection must be made in the Responsible Party Type field if the Responsible Party field has been set.</errorMessage>
</ValidationRule>