force-app/main/default/objects/MUSW__Complaint2__c/listViews/clariti__Online_All_Complaints.listView-meta.xml
<ListView>
    <fullName>clariti__Online_All_Complaints</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Status__c</columns>
    <columns>MUSW__Type__c</columns>
    <columns>MUSW__Address__c</columns>
    <columns>MUSW__Closed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Online All Complaints</label>
</ListView>