force-app/main/default/objects/MUSW__Complaint2__c/listViews/Complaint_Queue_Complaint2.listView-meta.xml
<ListView>
    <fullName>Complaint_Queue_Complaint2</fullName>
    <filterScope>Queue</filterScope>
    <label>Complaint Queue</label>
    <queue>Complaint_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>