force-app/main/default/objects/MUSW__Complaint2__c/listViews/Complaints_Complaint2.listView-meta.xml
<ListView>
    <fullName>Complaints_Complaint2</fullName>
    <filterScope>Queue</filterScope>
    <label>Complaints</label>
    <queue>Complaints</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>