force-app/main/default/objects/MUSW__Complaint2__c/listViews/Complaints_Queue.listView-meta.xml
<ListView>
    <fullName>Complaints_Queue</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Status__c</columns>
    <columns>MUSW__Parcel__c</columns>
    <columns>MUSW__Primary_Complaint__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Complaints Queue</label>
    <queue>Complaints</queue>
</ListView>