force-app/main/default/objects/MUSW__Complaint2__c/listViews/MUSW__BG_New_and_Open_Complaints_Default.listView-meta.xml
<ListView>
    <fullName>MUSW__BG_New_and_Open_Complaints_Default</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Description__c</columns>
    <columns>MUSW__Type__c</columns>
    <columns>MUSW__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>MUSW__Status__c</field>
        <operation>equals</operation>
        <value>New,Working</value>
    </filters>
    <label>New and Open Complaints</label>
</ListView>