force-app/main/default/objects/MUSW__Complaint2__c/listViews/MUSW__Complaint_Queue_Default.listView-meta.xml
<ListView>
    <fullName>MUSW__Complaint_Queue_Default</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Status__c</columns>
    <columns>MUSW__Type__c</columns>
    <columns>MUSW__Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Complaint Queue Default</label>
</ListView>